--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>شبابيك للستائر - دكتور ديكور</title>
+    <title>شبابيك للستائر</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700;900&display=swap" rel="stylesheet">
     
@@ -42,34 +42,67 @@
         .hero h1 { font-size: clamp(28px, 6vw, 55px); font-weight: 900; margin-bottom: 20px; }
         .hero span { color: var(--primary-gold); }
 
+        /* التواصل في الهيرو */
         .social-hero { display: flex; gap: 20px; margin-top: 25px; }
         .social-hero a { color: var(--white); font-size: 1.8rem; transition: 0.3s; text-decoration: none; }
         .social-hero a:hover { color: var(--primary-gold); transform: translateY(-5px); }
 
-        /* الأقسام */
-        .catalog-grid { display: flex; flex-wrap: nowrap; overflow-x: auto; gap: 20px; padding: 40px 5%; max-width: 1200px; margin: auto; scrollbar-width: none; }
-        .catalog-grid::-webkit-scrollbar { display: none; }
-        .catalog-card { flex: 0 0 calc(25% - 15px); position: relative; border-radius: 20px; overflow: hidden; height: 350px; cursor: pointer; transition: 0.3s; box-shadow: 0 10px 30px rgba(0,0,0,0.1); }
+        /* أقسامنا تفاعلية بخط واحد */
+        .catalog-grid { 
+            display: flex; 
+            flex-wrap: nowrap; 
+            overflow-x: auto; 
+            gap: 20px; 
+            padding: 40px 5%; 
+            max-width: 1200px; 
+            margin: auto;
+            scrollbar-width: none; /* لإخفاء شريط التمرير في فايرفوكس */
+        }
+        .catalog-grid::-webkit-scrollbar { display: none; } /* لإخفاء شريط التمرير في كروم */
+        
+        .catalog-card { 
+            flex: 0 0 calc(25% - 15px); /* 4 صور في الصف الواحد */
+            position: relative; 
+            border-radius: 20px; 
+            overflow: hidden; 
+            height: 350px; 
+            cursor: pointer; 
+            box-shadow: 0 10px 30px rgba(0,0,0,0.1); 
+            transition: 0.3s ease;
+        }
         .catalog-card:hover { transform: scale(1.03); }
         .catalog-card img { width: 100%; height: 100%; object-fit: cover; }
-        .catalog-label { position: absolute; bottom: 20px; left: 50%; transform: translateX(-50%); background: rgba(0,0,0,0.8); color: white; padding: 8px 20px; border-radius: 10px; font-weight: bold; }
+        .catalog-label { position: absolute; bottom: 20px; left: 50%; transform: translateX(-50%); background: rgba(0,0,0,0.8); color: white; padding: 8px 20px; border-radius: 10px; font-weight: bold; white-space: nowrap; font-size: 0.9rem; }
 
-        /* دكتور ديكور */
-        .dr-decor-banner { background: var(--dark-brown); color: var(--white); padding: 40px 5%; margin: 40px auto; border-radius: 20px; display: flex; align-items: center; gap: 30px; max-width: 1100px; border-right: 8px solid var(--primary-gold); }
-        .dr-icon { font-size: 3.5rem; color: var(--primary-gold); }
+        /* لماذا شبابيك؟ */
+        .features-section { background: var(--light-bg); padding: 80px 5%; text-align: center; }
+        .features-section h2 { 
+            font-size: 2.5rem; /* تم تصغير الحجم */
+            font-weight: 700; /* تغيير نوع الخط ليكون أنحف قليلاً */
+            margin-bottom: 40px; 
+            font-family: 'Cairo', sans-serif;
+        }
+        .features-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(220px, 1fr)); gap: 30px; }
+        .feature-item i { font-size: 4.5rem; color: var(--primary-gold); margin-bottom: 20px; display: block; }
+        .feature-item h3 { font-size: 1.4rem; font-weight: 700; margin-bottom: 10px; }
+        .feature-item p { font-size: 1rem; opacity: 0.8; }
 
-        /* آراء العملاء */
-        .testimonials-section { padding: 60px 5%; text-align: center; }
-        .testimonials-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 25px; margin-top: 40px; }
-        .testimonial-card { background: var(--light-bg); padding: 30px; border-radius: 15px; position: relative; box-shadow: 0 5px 15px rgba(0,0,0,0.05); }
-        .stars { color: #ffc107; margin-bottom: 10px; }
+        /* تواصل معنا */
+        .contact-container { max-width: 1000px; margin: auto; display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 30px; padding: 60px 5%; text-align: right; }
+        .contact-info-box { background: var(--light-bg); padding: 30px; border-radius: 15px; }
+        .contact-info-item { display: flex; align-items: center; gap: 15px; margin-bottom: 25px; }
+        .contact-info-item i { color: var(--primary-gold); font-size: 1.5rem; }
+
+        /* من نحن */
+        .about-text { max-width: 900px; margin: auto; padding: 60px 5%; line-height: 2; text-align: justify; font-size: 1.2rem; }
 
         /* الفوتر */
-        footer { background: var(--dark-brown); color: white; padding: 60px 5% 20px; margin-top: 50px; }
+        footer { background: var(--dark-brown); color: white; padding: 60px 5% 20px; }
+        .footer-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 40px; }
+        .whatsapp-link-footer { color: var(--primary-gold); text-decoration: none; font-weight: bold; display: flex; align-items: center; gap: 10px; margin-top: 10px; }
 
         @media (max-width: 768px) {
-            .catalog-card { flex: 0 0 75%; }
-            .dr-decor-banner { flex-direction: column; text-align: center; }
+            .catalog-card { flex: 0 0 70%; } /* عرض صورة واحدة تقريباً على الجوال مع إمكانية السحب */
         }
     </style>
 </head>
@@ -77,7 +110,7 @@
 
     <div class="top-banner">
         <div>مرحباً بكم في شبابيك للستائر</div>
-        <a href="https://wa.me/9647883002797" class="whatsapp-link-top">واتساب <i class="fa-brands fa-whatsapp"></i></a>
+        <a href="https://wa.me/9647883002797" class="whatsapp-link-top">تواصل معنا عبر واتساب <i class="fa-brands fa-whatsapp"></i></a>
     </div>
 
     <header>
@@ -99,15 +132,20 @@
         <div id="homePage" class="page-section active-page">
             <section class="hero">
                 <h1>فخامة التفاصيل تبدأ من <br> <span>شبابيك منزلك</span></h1>
+                <p>اكتشف أفخم تشكيلة ستائر منزلية بتصاميم عصرية وكلاسيكية</p>
                 <div class="social-hero">
-                    <a href="#"><i class="fab fa-facebook"></i></a>
-                    <a href="#"><i class="fab fa-instagram"></i></a>
-                    <a href="#"><i class="fab fa-whatsapp"></i></a>
+                    <a href="https://www.facebook.com/profile.php?id=61587692021311" target="_blank"><i class="fab fa-facebook"></i></a>
+                    <a href="https://www.instagram.com/shababek.curtains/" target="_blank"><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.tiktok.com/@shababek.curtains" target="_blank"><i class="fab fa-tiktok"></i></a>
+                    <a href="https://youtube.com/@shababek.curtains?si=KKsEbL98N0fq2e2U" target="_blank"><i class="fab fa-youtube"></i></a>
+                    <a href="https://x.com/ShababekCurtain" target="_blank"><i class="fa-brands fa-x-twitter"></i></a>
+                    <a href="https://www.snapchat.com/add/shababek.curtains" target="_blank"><i class="fab fa-snapchat"></i></a>
                 </div>
             </section>
 
             <section id="categories" style="padding-top: 80px;">
-                <h2 style="text-align:center; font-size:2.5rem; font-weight:900;">أقسامنا</h2>
+                <h2 style="text-align:center; font-size:2.5rem; font-weight:900; margin-bottom:10px;">أقسامنا</h2>
+                <p style="text-align:center; opacity:0.7; margin-bottom:20px;">اختر من بين مجموعتنا المتنوعة</p>
                 <div class="catalog-grid">
                     <div class="catalog-card"><img src="https://i.ibb.co/dsyqws88/curtain-blackout-BDZvwy-X3.jpg"><div class="catalog-label">بلاك أوت</div></div>
                     <div class="catalog-card"><img src="https://i.ibb.co/23ypfxBq/curtain-sheer-B6-H5y-JXx.jpg"><div class="catalog-label">شفافة</div></div>
@@ -116,49 +154,63 @@
                 </div>
             </section>
 
-            <section style="padding: 0 5%;">
-                <div class="dr-decor-banner">
-                    <div class="dr-icon"><i class="fa-solid fa-wand-magic-sparkles"></i></div>
-                    <div>
-                        <h2 style="color: var(--primary-gold);">دكتور ديكور</h2>
-                        <p>محتار في اختيار اللون؟ "دكتور ديكور" يقدم لك استشارة مجانية لتنسيق ستائرك.</p>
-                        <button onclick="location.href='https://wa.me/9647883002797?text=استشارة دكتور ديكور'" style="margin-top:15px; padding:10px 25px; border-radius:50px; border:none; background:var(--primary-gold); color:white; font-weight:bold; cursor:pointer;">اطلب استشارتك</button>
-                    </div>
-                </div>
-            </section>
-
-            <section class="testimonials-section">
-                <h2>ثقة عملاء شبابيك</h2>
-                <div class="testimonials-grid">
-                    <div class="testimonial-card">
-                        <div class="stars"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></div>
-                        <p>"تعامل راقي جداً والستائر خيال."</p>
-                        <h4>- أم سارة</h4>
-                    </div>
-                    <div class="testimonial-card">
-                        <div class="stars"><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i></div>
-                        <p>"دكتور ديكور ساعدني جداً بالاختيار."</p>
-                        <h4>- الأستاذ أحمد</h4>
-                    </div>
+            <section class="features-section">
+                <h2>لماذا شبابيك؟</h2>
+                <div class="features-grid">
+                    <div class="feature-item"><i class="fa-solid fa-palette"></i><h3>تصاميم حصرية</h3></div>
+                    <div class="feature-item"><i class="fa-solid fa-ruler-combined"></i><h3>مقاسات مخصصة</h3></div>
+                    <div class="feature-item"><i class="fa-solid fa-truck-fast"></i><h3>تركيب منزلي</h3></div>
+                    <div class="feature-item"><i class="fa-solid fa-shield-halved"></i><h3>ضمان الجودة</h3></div>
                 </div>
             </section>
         </div>
 
         <div id="aboutPage" class="page-section">
-            <h1 style="text-align:center; padding:100px;">من نحن - شبابيك للستائر</h1>
+            <section class="hero" style="height:40vh; background-image: url('https://i.ibb.co/0R1MK2d7/Gemini-Generated-Image-tnocdatnocdatnoc.png');">
+                <h1>من نحن</h1>
+            </section>
+            <div class="about-text">
+                <h2 style="color:var(--dark-brown); margin-bottom:20px;">شبابيك للستائر</h2>
+                <p>تأسست شبابيك للستائر بهدف تقديم أفخم وأجود أنواع الستائر المنزلية في العراق. نؤمن بأن الستائر عنصر أساسي يعكس ذوق أصحاب المنزل ويضيف لمسة من الأناقة والفخامة.</p>
+            </div>
         </div>
+
         <div id="contactPage" class="page-section">
-            <h1 style="text-align:center; padding:100px;">تواصل معنا</h1>
+            <section class="hero" style="height:40vh; background-image: url('https://i.ibb.co/0R1MK2d7/Gemini-Generated-Image-tnocdatnocdatnoc.png');">
+                <h1>تواصل معنا</h1>
+            </section>
+            <div class="contact-container">
+                <div class="contact-info-box">
+                    <div class="contact-info-item"><i class="fa-solid fa-location-dot"></i><div><strong>العنوان:</strong> العراق - بغداد</div></div>
+                    <div class="contact-info-item"><i class="fa-brands fa-whatsapp"></i><div><strong>واتساب:</strong> تواصل معنا عبر واتساب</div></div>
+                    <div class="contact-info-item"><i class="fa-solid fa-clock"></i><div><strong>ساعات العمل:</strong> السبت - الخميس 9ص - 9م</div></div>
+                </div>
+                <div style="background:var(--white); padding:30px; border-radius:15px; border:1px solid #ddd; text-align:center;">
+                    <h3>أرسل لنا رسالة</h3>
+                    <button onclick="location.href='https://wa.me/9647883002797'" style="width:100%; padding:15px; background:#25D366; color:white; border:none; border-radius:10px; font-weight:bold; margin-top:20px; cursor:pointer;">تواصل معنا عبر واتساب <i class="fa-brands fa-whatsapp"></i></button>
+                </div>
+            </div>
         </div>
     </main>
 
-    <footer>
-        <p style="text-align:center;">© 2025 شبابيك للستائر - جميع الحقوق محفوظة.</p>
+    <footer id="contact">
+        <div class="footer-grid">
+            <div>
+                <h3 style="color:var(--primary-gold); margin-bottom:20px;">شبابيك للستائر</h3>
+                <p style="opacity:0.8;">نقدم أفخم تشكيلة ستائر منزلية بأعلى جودة وأفضل الأسعار.</p>
+            </div>
+            <div>
+                <h3>تواصل معنا</h3>
+                <p>العراق - بغداد</p>
+                <a href="https://wa.me/9647883002797" class="whatsapp-link-footer">تواصل معنا عبر واتساب <i class="fa-brands fa-whatsapp"></i></a>
+            </div>
+        </div>
+        <p style="text-align:center; margin-top:40px; opacity:0.5; border-top:1px solid rgba(255,255,255,0.1); padding-top:20px;">© 2025 شبابيك للستائر جميع الحقوق محفوظة.</p>
     </footer>
 
     <script>
         function showPage(pageId) {
-            document.querySelectorAll('.page-section').forEach(p => p.classList.remove('active-page'));
+            document.querySelectorAll('.page-section').forEach(page => page.classList.remove('active-page'));
             if(pageId === 'categories') {
                 document.getElementById('homePage').classList.add('active-page');
                 document.getElementById('categories').scrollIntoView({ behavior: 'smooth' });
@@ -167,6 +219,7 @@
                 window.scrollTo(0,0);
             }
         }
+
         let clicks = 0;
         function checkAdminClick() {
             clicks++; if(clicks >= 5) { alert("لوحة الإدارة قيد التفعيل"); clicks = 0; }
