--- a/index.html
+++ b/index.html
@@ -1,229 +1,148 @@
-<!DOCTYPE html>
-<html lang="ar" dir="rtl">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>شبابيك للستائر</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700;900&display=swap" rel="stylesheet">
-    
-    <style>
-        :root {
-            --primary-gold: #d9b382;
-            --dark-brown: #3d2e24; 
-            --white: #ffffff;
-            --light-bg: #f9f6f2;
-        }
-
-        * { box-sizing: border-box; margin: 0; padding: 0; }
-        body { font-family: 'Cairo', sans-serif; background-color: var(--white); color: var(--dark-brown); scroll-behavior: smooth; overflow-x: hidden; }
-
-        /* البنر العلوي */
-        .top-banner { background: var(--dark-brown); color: var(--white); padding: 10px 5%; display: flex; justify-content: space-between; align-items: center; font-size: 14px; }
-        .whatsapp-link-top { color: var(--white); text-decoration: none; font-weight: bold; display: flex; align-items: center; gap: 8px; }
-
-        /* الهيدر */
-        header { background: rgba(255, 255, 255, 0.98); backdrop-filter: blur(10px); padding: 10px 5%; display: flex; justify-content: space-between; align-items: center; position: sticky; top: 0; z-index: 1000; box-shadow: 0 2px 15px rgba(0,0,0,0.05); }
-        .logo-img { height: 45px; cursor: pointer; }
-        .nav-menu { display: flex; gap: 20px; list-style: none; }
-        .nav-menu a { text-decoration: none; color: var(--dark-brown); font-weight: 700; cursor: pointer; font-size: 1rem; }
-        .nav-menu a:hover { color: var(--primary-gold); }
-
-        .page-section { display: none; }
-        .active-page { display: block; }
-
-        /* الهيرو */
-        .hero { 
-            height: 75vh; 
-            background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.5)), url('https://i.ibb.co/0R1MK2d7/Gemini-Generated-Image-tnocdatnocdatnoc.png'); 
-            background-size: cover; background-position: center; 
-            display: flex; flex-direction: column; justify-content: center; align-items: center; text-align: center; color: var(--white); padding: 20px;
-        }
-        .hero h1 { font-size: clamp(28px, 6vw, 55px); font-weight: 900; margin-bottom: 20px; }
-        .hero span { color: var(--primary-gold); }
-
-        /* التواصل في الهيرو */
-        .social-hero { display: flex; gap: 20px; margin-top: 25px; }
-        .social-hero a { color: var(--white); font-size: 1.8rem; transition: 0.3s; text-decoration: none; }
-        .social-hero a:hover { color: var(--primary-gold); transform: translateY(-5px); }
-
-        /* أقسامنا تفاعلية بخط واحد */
-        .catalog-grid { 
-            display: flex; 
-            flex-wrap: nowrap; 
-            overflow-x: auto; 
-            gap: 20px; 
-            padding: 40px 5%; 
-            max-width: 1200px; 
-            margin: auto;
-            scrollbar-width: none; /* لإخفاء شريط التمرير في فايرفوكس */
-        }
-        .catalog-grid::-webkit-scrollbar { display: none; } /* لإخفاء شريط التمرير في كروم */
-        
-        .catalog-card { 
-            flex: 0 0 calc(25% - 15px); /* 4 صور في الصف الواحد */
-            position: relative; 
-            border-radius: 20px; 
-            overflow: hidden; 
-            height: 350px; 
-            cursor: pointer; 
-            box-shadow: 0 10px 30px rgba(0,0,0,0.1); 
-            transition: 0.3s ease;
-        }
-        .catalog-card:hover { transform: scale(1.03); }
-        .catalog-card img { width: 100%; height: 100%; object-fit: cover; }
-        .catalog-label { position: absolute; bottom: 20px; left: 50%; transform: translateX(-50%); background: rgba(0,0,0,0.8); color: white; padding: 8px 20px; border-radius: 10px; font-weight: bold; white-space: nowrap; font-size: 0.9rem; }
-
-        /* لماذا شبابيك؟ */
-        .features-section { background: var(--light-bg); padding: 80px 5%; text-align: center; }
-        .features-section h2 { 
-            font-size: 2.5rem; /* تم تصغير الحجم */
-            font-weight: 700; /* تغيير نوع الخط ليكون أنحف قليلاً */
-            margin-bottom: 40px; 
-            font-family: 'Cairo', sans-serif;
-        }
-        .features-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(220px, 1fr)); gap: 30px; }
-        .feature-item i { font-size: 4.5rem; color: var(--primary-gold); margin-bottom: 20px; display: block; }
-        .feature-item h3 { font-size: 1.4rem; font-weight: 700; margin-bottom: 10px; }
-        .feature-item p { font-size: 1rem; opacity: 0.8; }
-
-        /* تواصل معنا */
-        .contact-container { max-width: 1000px; margin: auto; display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 30px; padding: 60px 5%; text-align: right; }
-        .contact-info-box { background: var(--light-bg); padding: 30px; border-radius: 15px; }
-        .contact-info-item { display: flex; align-items: center; gap: 15px; margin-bottom: 25px; }
-        .contact-info-item i { color: var(--primary-gold); font-size: 1.5rem; }
-
-        /* من نحن */
-        .about-text { max-width: 900px; margin: auto; padding: 60px 5%; line-height: 2; text-align: justify; font-size: 1.2rem; }
-
-        /* الفوتر */
-        footer { background: var(--dark-brown); color: white; padding: 60px 5% 20px; }
-        .footer-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 40px; }
-        .whatsapp-link-footer { color: var(--primary-gold); text-decoration: none; font-weight: bold; display: flex; align-items: center; gap: 10px; margin-top: 10px; }
-
-        @media (max-width: 768px) {
-            .catalog-card { flex: 0 0 70%; } /* عرض صورة واحدة تقريباً على الجوال مع إمكانية السحب */
-        }
-    </style>
-</head>
-<body>
-
-    <div class="top-banner">
-        <div>مرحباً بكم في شبابيك للستائر</div>
-        <a href="https://wa.me/9647883002797" class="whatsapp-link-top">تواصل معنا عبر واتساب <i class="fa-brands fa-whatsapp"></i></a>
+<footer id="contact">
+    <div class="footer-cta-section">
+        <h2>جاهز لتجديد ستائر منزلك؟ </h2>
+        <p>تواصل معنا الآن واحصل على استشارة مجانية وعرض سعر خاص </p>
+        <div class="cta-btns">
+            <button class="btn-gold-footer" onclick="showPage('categories')">تصفح المنتجات </button>
+            <button class="btn-outline-footer" onclick="location.href='https://wa.me/9647883002797'">تواصل عبر واتساب </button>
+        </div>
     </div>
 
-    <header>
-        <button onclick="location.href='https://wa.me/9647883002797'" style="background:var(--primary-gold); color:white; border:none; padding:10px 20px; border-radius:8px; font-weight:bold; cursor:pointer;">احسب سعر ستارتك</button>
-        <nav>
-            <ul class="nav-menu">
-                <li><a onclick="showPage('home')">الرئيسية</a></li>
-                <li><a onclick="showPage('categories')">المنتجات</a></li>
-                <li><a onclick="showPage('about')">من نحن</a></li>
-                <li><a onclick="showPage('contact')">تواصل معنا</a></li>
+    <div class="footer-main-grid">
+        <div class="footer-column-info">
+            <h3>شبابيك للستائر </h3>
+            <p>نقدم أفخم تشكيلة من الستائر المنزلية بأعلى جودة وأفضل الأسعار. خبرة طويلة في تصميم وتركيب الستائر. </p>
+        </div>
+        <div class="footer-column-links">
+            <h3>روابط سريعة </h3>
+            <ul class="footer-links-list">
+                <li onclick="showPage('home')">الرئيسية </li>
+                <li onclick="showPage('categories')">المنتجات </li>
+                <li onclick="showPage('about')">من نحن </li>
+                <li onclick="showPage('contact')">تواصل معنا </li>
             </ul>
-        </nav>
-        <div onclick="checkAdminClick()">
-            <img src="https://i.ibb.co/3y1ZNCk0/1.png" class="logo-img" alt="شبابيك">
         </div>
-    </header>
-
-    <main id="mainContainer">
-        <div id="homePage" class="page-section active-page">
-            <section class="hero">
-                <h1>فخامة التفاصيل تبدأ من <br> <span>شبابيك منزلك</span></h1>
-                <p>اكتشف أفخم تشكيلة ستائر منزلية بتصاميم عصرية وكلاسيكية</p>
-                <div class="social-hero">
-                    <a href="https://www.facebook.com/profile.php?id=61587692021311" target="_blank"><i class="fab fa-facebook"></i></a>
-                    <a href="https://www.instagram.com/shababek.curtains/" target="_blank"><i class="fab fa-instagram"></i></a>
-                    <a href="https://www.tiktok.com/@shababek.curtains" target="_blank"><i class="fab fa-tiktok"></i></a>
-                    <a href="https://youtube.com/@shababek.curtains?si=KKsEbL98N0fq2e2U" target="_blank"><i class="fab fa-youtube"></i></a>
-                    <a href="https://x.com/ShababekCurtain" target="_blank"><i class="fa-brands fa-x-twitter"></i></a>
-                    <a href="https://www.snapchat.com/add/shababek.curtains" target="_blank"><i class="fab fa-snapchat"></i></a>
-                </div>
-            </section>
-
-            <section id="categories" style="padding-top: 80px;">
-                <h2 style="text-align:center; font-size:2.5rem; font-weight:900; margin-bottom:10px;">أقسامنا</h2>
-                <p style="text-align:center; opacity:0.7; margin-bottom:20px;">اختر من بين مجموعتنا المتنوعة</p>
-                <div class="catalog-grid">
-                    <div class="catalog-card"><img src="https://i.ibb.co/dsyqws88/curtain-blackout-BDZvwy-X3.jpg"><div class="catalog-label">بلاك أوت</div></div>
-                    <div class="catalog-card"><img src="https://i.ibb.co/23ypfxBq/curtain-sheer-B6-H5y-JXx.jpg"><div class="catalog-label">شفافة</div></div>
-                    <div class="catalog-card"><img src="https://i.ibb.co/JRd7B9dC/42edce8e89a20200950e110c2d8d41b2.jpg"><div class="catalog-label">ديكور</div></div>
-                    <div class="catalog-card"><img src="https://i.ibb.co/d4GXf0HM/curtain-roller-5c189-CRe.jpg"><div class="catalog-label">رول</div></div>
-                </div>
-            </section>
-
-            <section class="features-section">
-                <h2>لماذا شبابيك؟</h2>
-                <div class="features-grid">
-                    <div class="feature-item"><i class="fa-solid fa-palette"></i><h3>تصاميم حصرية</h3></div>
-                    <div class="feature-item"><i class="fa-solid fa-ruler-combined"></i><h3>مقاسات مخصصة</h3></div>
-                    <div class="feature-item"><i class="fa-solid fa-truck-fast"></i><h3>تركيب منزلي</h3></div>
-                    <div class="feature-item"><i class="fa-solid fa-shield-halved"></i><h3>ضمان الجودة</h3></div>
-                </div>
-            </section>
+        <div class="footer-column-contact">
+            <h3>تواصل معنا </h3>
+            <p>العراق - بغداد </p>
+            <p onclick="location.href='https://wa.me/9647883002797'" style="cursor:pointer;">واتساب </p>
         </div>
-
-        <div id="aboutPage" class="page-section">
-            <section class="hero" style="height:40vh; background-image: url('https://i.ibb.co/0R1MK2d7/Gemini-Generated-Image-tnocdatnocdatnoc.png');">
-                <h1>من نحن</h1>
-            </section>
-            <div class="about-text">
-                <h2 style="color:var(--dark-brown); margin-bottom:20px;">شبابيك للستائر</h2>
-                <p>تأسست شبابيك للستائر بهدف تقديم أفخم وأجود أنواع الستائر المنزلية في العراق. نؤمن بأن الستائر عنصر أساسي يعكس ذوق أصحاب المنزل ويضيف لمسة من الأناقة والفخامة.</p>
-            </div>
+        <div class="footer-column-phone">
+            <p dir="ltr">+964 788 300 2797 </p>
         </div>
+    </div>
+    <div class="footer-copyright">
+        © 2025 شبابيك للستائر جميع الحقوق محفوظة. 
+    </div>
+</footer>
 
-        <div id="contactPage" class="page-section">
-            <section class="hero" style="height:40vh; background-image: url('https://i.ibb.co/0R1MK2d7/Gemini-Generated-Image-tnocdatnocdatnoc.png');">
-                <h1>تواصل معنا</h1>
-            </section>
-            <div class="contact-container">
-                <div class="contact-info-box">
-                    <div class="contact-info-item"><i class="fa-solid fa-location-dot"></i><div><strong>العنوان:</strong> العراق - بغداد</div></div>
-                    <div class="contact-info-item"><i class="fa-brands fa-whatsapp"></i><div><strong>واتساب:</strong> تواصل معنا عبر واتساب</div></div>
-                    <div class="contact-info-item"><i class="fa-solid fa-clock"></i><div><strong>ساعات العمل:</strong> السبت - الخميس 9ص - 9م</div></div>
-                </div>
-                <div style="background:var(--white); padding:30px; border-radius:15px; border:1px solid #ddd; text-align:center;">
-                    <h3>أرسل لنا رسالة</h3>
-                    <button onclick="location.href='https://wa.me/9647883002797'" style="width:100%; padding:15px; background:#25D366; color:white; border:none; border-radius:10px; font-weight:bold; margin-top:20px; cursor:pointer;">تواصل معنا عبر واتساب <i class="fa-brands fa-whatsapp"></i></button>
-                </div>
-            </div>
-        </div>
-    </main>
+<style>
+    /* تنسيقات الفوتر الجديد ليتطابق مع الصورة */
+    footer {
+        background-color: var(--dark-brown);
+        color: var(--white);
+        padding: 60px 5% 20px;
+        text-align: center;
+    }
 
-    <footer id="contact">
-        <div class="footer-grid">
-            <div>
-                <h3 style="color:var(--primary-gold); margin-bottom:20px;">شبابيك للستائر</h3>
-                <p style="opacity:0.8;">نقدم أفخم تشكيلة ستائر منزلية بأعلى جودة وأفضل الأسعار.</p>
-            </div>
-            <div>
-                <h3>تواصل معنا</h3>
-                <p>العراق - بغداد</p>
-                <a href="https://wa.me/9647883002797" class="whatsapp-link-footer">تواصل معنا عبر واتساب <i class="fa-brands fa-whatsapp"></i></a>
-            </div>
-        </div>
-        <p style="text-align:center; margin-top:40px; opacity:0.5; border-top:1px solid rgba(255,255,255,0.1); padding-top:20px;">© 2025 شبابيك للستائر جميع الحقوق محفوظة.</p>
-    </footer>
+    .footer-cta-section {
+        margin-bottom: 60px;
+    }
 
-    <script>
-        function showPage(pageId) {
-            document.querySelectorAll('.page-section').forEach(page => page.classList.remove('active-page'));
-            if(pageId === 'categories') {
-                document.getElementById('homePage').classList.add('active-page');
-                document.getElementById('categories').scrollIntoView({ behavior: 'smooth' });
-            } else {
-                document.getElementById(pageId + 'Page').classList.add('active-page');
-                window.scrollTo(0,0);
-            }
+    .footer-cta-section h2 {
+        font-size: 2.2rem;
+        font-weight: 700;
+        margin-bottom: 10px;
+    }
+
+    .footer-cta-section p {
+        opacity: 0.8;
+        margin-bottom: 30px;
+    }
+
+    .cta-btns {
+        display: flex;
+        justify-content: center;
+        gap: 15px;
+    }
+
+    .btn-gold-footer {
+        background-color: var(--primary-gold);
+        color: var(--white);
+        border: none;
+        padding: 12px 30px;
+        border-radius: 8px;
+        font-weight: bold;
+        cursor: pointer;
+    }
+
+    .btn-outline-footer {
+        background: transparent;
+        border: 1px solid var(--white);
+        color: var(--white);
+        padding: 12px 30px;
+        border-radius: 8px;
+        font-weight: bold;
+        cursor: pointer;
+    }
+
+    .footer-main-grid {
+        display: grid;
+        grid-template-columns: 1.5fr 1fr 1fr 1fr;
+        gap: 40px;
+        text-align: right;
+        padding-bottom: 40px;
+        border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+    }
+
+    .footer-column-info h3, .footer-column-links h3, .footer-column-contact h3 {
+        font-size: 1.2rem;
+        margin-bottom: 20px;
+    }
+
+    .footer-column-info p {
+        line-height: 1.8;
+        opacity: 0.8;
+    }
+
+    .footer-links-list {
+        list-style: none;
+    }
+
+    .footer-links-list li {
+        margin-bottom: 10px;
+        cursor: pointer;
+        opacity: 0.8;
+    }
+
+    .footer-links-list li:hover {
+        opacity: 1;
+        color: var(--primary-gold);
+    }
+
+    .footer-column-phone {
+        display: flex;
+        align-items: center;
+        justify-content: flex-end;
+        font-weight: bold;
+    }
+
+    .footer-copyright {
+        padding-top: 20px;
+        font-size: 0.9rem;
+        opacity: 0.6;
+    }
+
+    @media (max-width: 768px) {
+        .footer-main-grid {
+            grid-template-columns: 1fr;
+            text-align: center;
         }
-
-        let clicks = 0;
-        function checkAdminClick() {
-            clicks++; if(clicks >= 5) { alert("لوحة الإدارة قيد التفعيل"); clicks = 0; }
+        .footer-column-phone {
+            justify-content: center;
         }
-    </script>
-</body>
-</html>
+        .cta-btns {
+            flex-direction: column;
+        }
+    }
+</style>
